Improve Class & Regulation feature

--- a/src/client/templates/class.html
+++ b/src/client/templates/class.html
@@ -6,6 +6,7 @@
       </div>
       <div class="panel-body notification-area">
         <div class="container-fluid">
+          <search-student/>
           <form role="form" name="class_management" id="class_management">
             <div class="row form-horizontal">
                <div class="col-md-3 col-sm-6">
@@ -26,7 +27,7 @@
                   <div class="col-xs-7">
                     <select ng-change="getStudentInClass()"  ng-model="class" class="form-control input-sm" ng-disabled="!grade">
                         <option ng-selected="1" value="">Chọn lớp</option>
-                        <option ng-repeat="cls in classes" value="{{cls.classID}}">{{cls.className}}</option>                                          
+                        <option ng-repeat="cls in classes" value="{{cls}}">{{cls.className}}</option>                                          
                     </select>
                   </div>
                 </div>
@@ -37,14 +38,13 @@
           <div class="row form-horizontal">
             <div class="btn-group">
               <button ng-disabled="!class" type="button" class="btn btn-primary btn-xs" ng-click="openStudentList()"><i class="fa fa-plus-circle"></i> Thêm Học Sinh</button>
-              <button ng-disabled="!selectedRow" type="button" class="btn btn-primary btn-xs" ng-click="removeStudentFromClass()"><i class="fa fa-times"></i> Xoá Khỏi Lớp</button>
-              <button ng-disabled="!studentList.data.length" type="button" class="btn btn-primary btn-xs" ng-click=""><i class="fa fa-file-text-o"></i> Nhập Điểm</button>
-              <button ng-disabled="!studentList.data.length" type="button" class="btn btn-primary btn-xs" ng-click=""><i class="fa fa-file-text"></i> Nhận Điểm</button>
+              <button ng-disabled="!selectedStudents" type="button" class="btn btn-primary btn-xs" ng-click="removeStudentFromClass()"><i class="fa fa-times"></i> Xoá Khỏi Lớp</button>
+              <button ng-disabled="!studentList.data.length" type="button" class="btn btn-primary btn-xs" ng-click="inputScoreSem1()"><i class="fa fa-file-text-o"></i> Nhập Điểm HK I</button>
+              <button ng-disabled="!studentList.data.length" type="button" class="btn btn-primary btn-xs" ng-click="inputScoreSem2()"><i class="fa fa-file-text-o"></i> Nhập Điểm HK II</button>
+              <button ng-disabled="!studentList.data.length" type="button" class="btn btn-primary btn-xs" ng-click="viewscroe()"><i class="fa fa-file-text"></i> Nhận Điểm</button>
             </div>
           </div>
-
           <div id="listStudent" ui-grid-selection ui-grid-resize-columns ui-grid="studentList" class="grid"><span ng-show="studentList.data.length==0" class="grid-status">{{studentListStatus}}</span></div>
-          <search-student>
         </div>
       </div>
 
