--- a/src/client/templates/school_year.html
+++ b/src/client/templates/school_year.html
@@ -28,7 +28,7 @@
                     <input type="text" class="form-control input-sm" disabled ng-model="selectedFutureSchoolYearName">
                   </div>
                   <div class="col-sm-4 col-xs-6">
-                    <button type="submit" class="btn btn-primary btn-xs" ng-click="selectSchoolYear()"><i class="fa fa-check-square"></i> Mở</button>
+                    <button type="submit" class="btn btn-primary btn-xs" ng-click="selectSchoolYear()"><i class="fa fa-graduation-cap"></i> Mở</button>
                   </div>
                 </div>
               </div>
