--- a/src/client/templates/student_edit.html
+++ b/src/client/templates/student_edit.html
@@ -7,7 +7,7 @@
       <div class="form-group">
         <label class="control-label col-xs-5 input-sm">Nhập học:</label>
         <div class="col-xs-7">
-          <input ng-disabled="1" ng-model="data.yearAdmission" type="text" class="form-control input-sm">
+          <input ng-disabled="1" ng-model="data.yearAdmissionName" type="text" class="form-control input-sm">
         </div>
       </div>
       <div class="form-group">
