--- a/src/client/templates/regulation.html
+++ b/src/client/templates/regulation.html
@@ -39,7 +39,7 @@
                   </div>
                 </div>
                 <div class="col-xs-12" style="margin-top: 10px">
-                  <div id="grid-grade10" ui-grid="grade10" ui-grid-edit ui-grid-cellNav ui-grid-selection class="grid"></div>
+                  <div id="grid-grade10" ui-grid="grade10" ui-grid-edit ui-grid-cellNav ui-grid-selection ui-grid-resize-columns class="grid"></div>
                 </div>
               </div>
               <div class="col-md-4 col-sm-12 no-padding">
@@ -51,7 +51,7 @@
                   </div>
                 </div>
                 <div class="col-xs-12" style="margin-top: 10px">
-                  <div id="grid-grade11" ui-grid="grade11" ui-grid-edit ui-grid-cellNav ui-grid-selection class="grid"></div>
+                  <div id="grid-grade11" ui-grid="grade11" ui-grid-edit ui-grid-cellNav ui-grid-selection ui-grid-resize-columns class="grid"></div>
                 </div>
               </div>
               <div class="col-md-4 col-sm-12 no-padding">
@@ -63,7 +63,7 @@
                   </div>
                 </div>
                 <div class="col-xs-12" style="margin-top: 10px">
-                  <div id="grid-grade12" ui-grid="grade12" ui-grid-edit ui-grid-cellNav ui-grid-selection class="grid"></div>
+                  <div id="grid-grade12" ui-grid="grade12" ui-grid-edit ui-grid-cellNav ui-grid-selection  ui-grid-resize-columns class="grid"></div>
                 </div>
             </div>  
             </div>
@@ -83,7 +83,7 @@
                   </div>
                 </div>
                 <div class="col-xs-12" style="margin-top: 10px">
-                  <div id="grid-course" ui-grid="course" ui-grid-edit ui-grid-cellNav ui-grid-selection class="grid"></div>
+                  <div id="grid-course" ui-grid="course" ui-grid-edit ui-grid-cellNav ui-grid-selection ui-grid-resize-columns class="grid"></div>
                 </div>
               </div>
               <div class="col-md-6 col-sm-12" style="margin-top: 15px;">
