--- a/src/client/templates/dashboard.html
+++ b/src/client/templates/dashboard.html
@@ -1,9 +1,3 @@
-<div class="row alerts-container" data-ng-controller="AlertsCtrl" data-ng-show="alerts.length">
-    <div class="col-xs-12">
-        <uib-alert data-ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">{{alert.msg}}</uib-alert>
-    </div>
-</div>
-
 <div class="row">
     <div class="col-lg-3 col-md-6 col-xs-12">
         <rd-widget>
@@ -51,7 +45,7 @@
     </div>
 </div>
 
-<div class="row">
+<!--<div class="row">
     <div class="col-lg-6">
         <rd-widget>
             <rd-widget-header icon="fa-tasks" title="Servers">
@@ -128,4 +122,4 @@
                             </rd-widget-body>
                         </rd-widget>
                     </div>
-                </div>
+                </div>-->
