--- a/src/client/templates/report.html
+++ b/src/client/templates/report.html
@@ -6,65 +6,42 @@
       </div>
       <div class="panel-body notification-area">
         <div class="container-fluid">
-          <form role="form" name="report" id="report">
+          <form role="form" name="reportForm" id="report">
             <div class="row form-horizontal">
-               <div class="col-md-3 col-sm-6">
-                <div class="form-group">
-                  <label class="control-label col-xs-5 input-sm">Khối</label>
-
-                  <div class="col-xs-7">
-                    <select class="form-control input-sm" name="Username">
-                        <option class="placeholder-option" value="" selected>Tất cả</option>
-                        <option value="10">10</option>
-                        <option value="11">11</option>   
-                          <option value="12">12</option>                                              
-                    </select>
-                  </div>
-                </div>
-              </div>              
               <div class="col-md-3 col-sm-6">
                 <div class="form-group">
-                  <label class="control-label col-xs-5 input-sm">Học kì</label>
-                  <div class="col-xs-7">
-                    <select class="form-control input-sm" name="Username">
-                        <option class="placeholder-option" value="" selected>Cả năm</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>                                                  
-                    </select>
-                  </div>
+                  <label class="radio-inline"><input ng-checked="1" ng-model="semesterID" value="1" type="radio" name="sesmter">HK I   </label>
+                  <label class="radio-inline"><input ng-model="semesterID" value="2" type="radio" name="sesmter">HK II   </label>
+                  <!--<label class="radio-inline"><input ng-checked="1" ng-model="semesterID" value="" type="radio" name="sesmter">Cả năm   </label>-->
                 </div>
               </div>
               <div class="col-md-3 col-sm-6">
                 <div class="form-group">
-                  <label class="control-label col-xs-5 input-sm">Môn học</label>
-
-                  <div class="col-xs-7">
-                    <select class="form-control input-sm" name="Username">
-                                                <option class="placeholder-option" value="" selected>Tất cả</option>
-                                                <option value="1">Toán</option>
-                                                <option value="0">Lý</option>   
-                                                 <option value="1">Hoá</option>
-                                                <option value="0">Văn</option>    
-                                                 <option value="1">Sử</option>
-                                                <option value="0">Địa</option>                                                 
-                                            </select>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <div class="col-xs-12 text-right">
-                    <button type="submit" class="btn btn-primary btn-xs" ng-click=""><i class="fa fa-search"></i> Lập báo cáo</button>
-                    <button type="button" class="btn btn-primary btn-xs" ng-click=""><i class="fa fa-reply"></i> Reset</button>
+                    <div class="col-xs-7 col-sm-6 col-md-6 no-padding">
+                      <select ng-change="getScoreList()" ng-model="subjectID" class="form-control input-sm">
+                        <option ng-selected="1" value="">Tất cả môn học</option>
+                        <option ng-repeat="subject in subjectList" value="{{subject.subjectID}}">{{subject.subjectName}}</option>                                          
+                    </select>
                   </div>
                 </div>
               </div>
+              <div class="col-md-6 col-sm-6">
+                <div class="form-group">
+                  <div class="col-xs-7 col-sm-6 col-md-6 no-padding">
+                    <button type="button" class="btn btn-primary btn-xs" ng-click="report()"><i class="fa fa-search"></i> Lập báo cáo</button>
+                    <button type="button" class="btn btn-primary btn-xs" ng-click="reset()"><i class="fa fa-reply"></i> Làm lại</button>
+                  </div>
+                </div>
+              </div>      
             </div>
           </form>
-          <div class="row form-horizontal">
-            <div class="btn-group">
+          <div class="row form-horizontal" id="report-area">
+            <!--<div class="btn-group">
               <button type="button" class="btn btn-primary btn-xs" ng-click="" ng-disabled="1"><i class="fa fa-files"></i> Xuất PDF</button>
-            </div>
+            </div>-->
+            <h4>Test</h4>
           </div>
-          <div id="grid1" ui-grid="reportList" class="grid"><span ng-show="studentList.data.length==0" class="text-center">Không có dữ liệu</span></div>
+          <div ng-if="reportList.data.length" id="reportGrid" ui-grid="reportList" class="grid"></div>
         </div>
       </div>
     </div>
