--- a/src/client/templates/school_year.html
+++ b/src/client/templates/school_year.html
@@ -2,7 +2,7 @@
   <div class="col-xs-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <strong><span class="fa fa-plus-circle"></span> Tạo năm học mới</strong>
+        <strong><span class="fa fa-graduation-cap"></span> Năm học</strong>
       </div>
       <div class="panel-body notification-area">
         <div class="container-fluid">
@@ -28,7 +28,7 @@
                     <input type="text" class="form-control input-sm" disabled ng-model="selectedFutureSchoolYearName">
                   </div>
                   <div class="col-sm-4 col-xs-6">
-                    <button type="submit" class="btn btn-primary btn-xs" ng-click="selectSchoolYear()"><i class="fa fa-graduation-cap"></i> Mở</button>
+                    <button type="submit" class="btn btn-primary btn-xs" ng-click="changeSchoolYear()"><i class="fa fa-graduation-cap"></i> Mở</button>
                   </div>
                 </div>
               </div>
