--- a/src/client/templates/student_list.html
+++ b/src/client/templates/student_list.html
@@ -67,7 +67,7 @@
                   <div class="col-xs-7">
                     <select ng-model="options.yearAdmission" class="form-control input-sm">
                         <option value="" selected>Tất cả</option>
-                        <option ng-repeat="data in masterSchoolYear" value="{{data.schoolYearID}}">{{data.schoolYearName}}</option>
+                        <option ng-repeat="data in schoolYear" value="{{data.schoolYearID}}">{{data.schoolYearName}}</option>
                     </select>
                   </div>
                 </div>
