--- a/src/client/style/appstyle.css
+++ b/src/client/style/appstyle.css
@@ -444,3 +444,8 @@ ul.sidebar li a {
     z-index: 999;
 }
 /*Login form - END*/
+
+.input-error{
+    box-shadow: rgba(0, 0, 0, 0.075) 0px 1px 1px inset, rgb(179, 0, 0) 0px 0px 8px;
+    border-color: rgb(177, 0, 0);
+}
