--- a/src/client/templates/student_edit.html
+++ b/src/client/templates/student_edit.html
@@ -2,18 +2,20 @@
   <div class="row form-horizontal">
     <h4 ng-bind="title"></h4>
   </div>
-  <div class="row form-horizontal">
+  <form class="row form-horizontal" name="studentEditForm">
     <div class="col-sm-6">
       <div class="form-group">
-        <label class="control-label col-xs-5 input-sm">Họ Tên:</label>
+        <label class="control-label col-xs-5 input-sm">Họ Tên (*):</label>
         <div class="col-xs-7">
-          <input ng-disabled="studentData.action == 'view'" ng-model="data.name" type="text" class="form-control input-sm">
+          <input required name="studentName" ng-disabled="studentData.action == 'view'" ng-model="data.name" type="text" class="form-control input-sm" 
+          ng-class="{'input-error': studentEditForm.studentName.$touched && studentEditForm.studentName.$invalid }">
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label col-xs-5 input-sm">Giới Tính:</label>
+        <label class="control-label col-xs-5 input-sm">Giới Tính (*):</label>
         <div class="col-xs-7">
-          <select ng-disabled="studentData.action == 'view'" ng-model="data.gender" class="form-control input-sm">
+          <select required name="studentGender" ng-disabled="studentData.action == 'view'" ng-model="data.gender" class="form-control input-sm"
+          ng-class="{'input-error': studentEditForm.studentGender.$touched && studentEditForm.studentGender.$invalid }">
                         <option value="">Chọn</option>
                         <option value="1">Nam</option>
                         <option value="0">Nữ</option>                                                
@@ -21,9 +23,10 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label col-xs-5 input-sm">Ngày Sinh:</label>
+        <label class="control-label col-xs-5 input-sm">Ngày Sinh (*):</label>
         <div class="col-xs-7" ng-class="studentData.action == 'view'?'hide-dp':''">
-          <input ng-disabled="studentData.action == 'view'" ng-readonly="studentData.action != 'view'"ng-model="data.birthday" placeholder="dd/mm/yyyy" type="text" class="dp-birthday form-control input-sm">
+          <input required name="studentBirthday" ng-disabled="studentData.action == 'view'" ng-model="data.birthday" placeholder="dd-mm-yyyy" type="text" class="dp-birthday form-control input-sm"
+          ng-pattern="datePattern" ng-class="{'input-error': studentEditForm.studentBirthday.$touched && studentEditForm.studentBirthday.$invalid }">
         </div>
       </div>
       <div class="form-group">
@@ -37,7 +40,8 @@
       <div class="form-group">
         <label class="control-label col-xs-5 input-sm">Email:</label>
         <div class="col-xs-7">
-          <input ng-disabled="studentData.action == 'view'" ng-model="data.email" type="text" class="form-control input-sm">
+          <input name="studentEmail" ng-disabled="studentData.action == 'view'" ng-model="data.email" type="text" class="form-control input-sm" ng-pattern="emailPattern"
+           ng-class="{'input-error': studentEditForm.studentEmail.$touched && studentEditForm.studentEmail.$invalid }">
         </div>
       </div>
       <div class="form-group">
@@ -65,5 +69,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </form>
 </div>
